--- a/Energy.UI/Controls/GraphControl.xaml
+++ b/Energy.UI/Controls/GraphControl.xaml
@@ -19,18 +19,22 @@
         <converters:DataTypeConverter x:Key="DataTypeConverter" />
 
         <DataTemplate DataType="{x:Type model:StationModel}">
-            <Grid Width="100" Height="100" ContextMenu="{StaticResource DeleteElementMenuItem}" >
+            <Canvas Width="100" Height="100" ContextMenu="{StaticResource DeleteElementMenuItem}" >
                 <Polygon Points="6,94 94,94 85,10 80,10 75,85 70,85 70,50 6,50" Fill="Black" Stroke="Black" />
                 <Polygon Points="41,60 45,60 40,70 45,70 34,83 38,74 35,74" Fill="Yellow" Stroke="White" />
                 <TextBlock Text="{Binding Name}" TextWrapping="Wrap" MaxWidth="70" HorizontalAlignment="Left" Margin="5,0,0,0" />
+                <Ellipse Canvas.Left="10" Canvas.Top="80" Height="10" Width="10" Fill="{Binding TagBrush}"  />
                 <Rectangle Fill="LightBlue" Opacity="0.7" Visibility="{Binding Path=IsSelected, Converter={StaticResource BooleanToVisibilityConverter} }" />
-            </Grid>
+            </Canvas>
         </DataTemplate>
         
         <DataTemplate DataType="{x:Type model:ConsumerModel}">
             <Grid Margin="0,50,0,0" Width="100" Height="50" ContextMenu="{StaticResource DeleteElementMenuItem}">
                 <Border BorderThickness="2" BorderBrush="Black" Background="LightSalmon" CornerRadius="10">
                     <TextBlock TextWrapping="Wrap" TextAlignment="Center" Text="{Binding Name}" MaxHeight="50" VerticalAlignment="Center" />
+                    <Border.ToolTip>
+                        <TextBlock Text="{Binding Path=ZonesDescription, Mode=OneWay}" />
+                    </Border.ToolTip>
                 </Border>
                 <Rectangle RadiusX="10" RadiusY="10" Fill="LightBlue" Opacity="0.7" Visibility="{Binding Path=IsSelected, Converter={StaticResource BooleanToVisibilityConverter} }" />
             </Grid>
