--- a/Energy.UI/Windows/EditLinkWindow.xaml
+++ b/Energy.UI/Windows/EditLinkWindow.xaml
@@ -22,11 +22,7 @@
         <TextBox Grid.Row="0" Grid.Column="1" Name="DistanceTextBox" VerticalAlignment="Center" Margin="0,0,5,0" Height="25" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" />
 
         <TextBlock Grid.Row="1" Grid.Column="0" Text="Проводимость" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="15,0,0,0" />
-        <ComboBox Grid.Row="1" Grid.Column="1" Name="ConductionComboBox" Margin="0,5,5,5" HorizontalContentAlignment="Right" Height="25">
-            <ComboBoxItem Content="1" />
-            <ComboBoxItem Content="2" />
-            <ComboBoxItem Content="3" />
-        </ComboBox>
+        <TextBox Grid.Row="1" Grid.Column="1" Name="ConductionTextBox" VerticalAlignment="Center" Margin="0,0,5,0" Height="25" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" />
 
         <StackPanel Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Right">
             <Button Name="SaveButton" Content="Сохранить" Width="80" Height="25" Margin="2" Click="SaveButton_OnClick" />
